# nasa-prithvi-wetlands

./: .gitmodules  CONTRIBUTING.md  README.md  prithvi_v2_eo_300_tl_unet_seagrass.ipynb  pyproject.toml
notebooks/: prithvi_v2_eo_300_tl_unet_mangrove.ipynb  prithvi_v2_eo_300_tl_unet_seagrass.ipynb  prithvi_v2_eo_300_tl_unet_seagrass_2class.ipynb  prithvi_v2_eo_300_tl_unet_seagrass_4class.ipynb
py/: calculate_chip_statistics.py  download_seagrass_and_mangrove.py  extract_tuning_patches.py
scripts/: calculate_chip_statistics_sentinel2.py  extract_tuning_patches_mangrove_sentinel2.py  extract_tuning_patches_seagrass_2class_sentinel2.py  extract_tuning_patches_seagrass_4class_sentinel2.py
src/: PrithviPatchExtractor.py  calculate_chip_statistics.py  download_seagrass_and_mangrove.py  extract_tuning_patches.py
