[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nasa-prithvi-wetlands"
version = "0.1.0"
description = "Mapping coastal wetlands with NASA's Prithvi-EO Geo Foundation Model"
readme = "README.md"
authors = [
    { name = "7yl4r" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pandas>=1.3.0",
    "pygbif>=0.6.0",
    "pyobis>=1.4.0",
    "terratorch>=0.1.3",
    "rasterio",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/7yl4r/nasa-prithvi-wetlands"
Repository = "https://github.com/7yl4r/nasa-prithvi-wetlands"
"Bug Tracker" = "https://github.com/7yl4r/nasa-prithvi-wetlands/issues"

[tool.setuptools]
packages = ["py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
